# euclidea-env

./: CMakeLists.txt  CMakePresets.json  main.cpp
include/: Puzzle.h  PuzzleState.h  Search.h  utils.h
src/: Puzzle.cpp  PuzzleState.cpp  PuzzleState_test.cpp  Puzzle_test.cpp  Search.cpp  main.cpp  utils.cpp  utils_test.cpp
